// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with custom breakpoints with inline props: default-breakpoints:from-mobile 1`] = `
<div
  class="test-component "
>
  From mobile
</div>
`;

exports[`renders with custom breakpoints with inline props: default-breakpoints:from-tablet-to-desktop 1`] = `
<div
  class="test-component jsx-3298173018"
>
  From tablet - To desktop
</div>
`;

exports[`renders with custom breakpoints with inline props: default-breakpoints:to-desktop 1`] = `
<div
  class="test-component jsx-3747896157"
>
  To desktop
</div>
`;

exports[`renders with custom breakpoints with props: custom-breakpoints:from-mobile 1`] = `
<div
  class="test-component "
>
  From mobile
</div>
`;

exports[`renders with custom breakpoints with props: custom-breakpoints:from-tablet-to-desktop 1`] = `
<div
  class="test-component jsx-3298173018"
>
  From tablet - To desktop
</div>
`;

exports[`renders with custom breakpoints with props: custom-breakpoints:to-desktop 1`] = `
<div
  class="test-component jsx-3747896157"
>
  To desktop
</div>
`;

exports[`renders with default breakpoints with inline props: default-breakpoints:from-md-to-xl 1`] = `
<div
  class="test-component jsx-1213670158"
>
  From md - To xl
</div>
`;

exports[`renders with default breakpoints with inline props: default-breakpoints:from-sm 1`] = `
<div
  class="test-component jsx-2917367701"
>
  From sm
</div>
`;

exports[`renders with default breakpoints with inline props: default-breakpoints:to-lg 1`] = `
<div
  class="test-component jsx-242699950"
>
  To lg
</div>
`;

exports[`renders with default breakpoints with props: default-breakpoints:from-md-to-xl 1`] = `
<div
  class="test-component jsx-1213670158"
>
  From md - To xl
</div>
`;

exports[`renders with default breakpoints with props: default-breakpoints:from-sm 1`] = `
<div
  class="test-component jsx-2917367701"
>
  From sm
</div>
`;

exports[`renders with default breakpoints with props: default-breakpoints:to-lg 1`] = `
<div
  class="test-component jsx-242699950"
>
  To lg
</div>
`;
